<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView
		android:id="@+id/txtView_hello"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/textView_hello"
	/>
	<RadioGroup
		android:id="@+id/radiogrp_sex"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	>
		<RadioButton
			android:id="@+id/radioBtn_female"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/radioBtn_fm_name"
		/>
		<RadioButton
			android:id="@+id/radioBtn_male"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/radioBtn_male_name"
		/>	
		
	</RadioGroup>
	<TextView
		android:id="@+id/TextV_hobby"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/textView_hobby"
	/>
	<CheckBox
		android:id="@+id/chkBox_love1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkBox_sing"
	/>
	<CheckBox
		android:id="@+id/chkBox_love2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkBox_dunce"
	/>
	<CheckBox
		android:id="@+id/chkBox_love3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/checkBox_ball"
	/>
	<ProgressBar
		android:id="@+id/prgBar_first"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
	/>
</LinearLayout>

